--- a/netcore/Views/Shared/_AdminlteNetcore.cshtml
+++ b/netcore/Views/Shared/_AdminlteNetcore.cshtml
@@ -1,4 +1,12 @@
 ﻿<!DOCTYPE html>
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+@inject netcore.Data.ApplicationDbContext Context
+@{
+
+    ApplicationUser appUser = await UserManager.GetUserAsync(User);
+
+}
 <html>
 <head>
     <meta charset="utf-8">
@@ -16,12 +24,12 @@
     <div class="wrapper">
         @Html.Partial("_AdminlteNetcoreMainHeader")
         <!-- Left side column. contains the logo and sidebar -->
-        @Html.Partial("_AdminlteNetcoreMainSidebar")
+        @Html.Partial("_AdminlteNetcoreMainSidebar", appUser)
         <!-- Content Wrapper. Contains page content -->
         @RenderBody()
         <!-- /.content-wrapper -->
         @Html.Partial("_AdminlteFooter")
-       
+
     </div>
     <!-- ./wrapper -->
 
