--- a/netcore/Views/Todo/Index.cshtml
+++ b/netcore/Views/Todo/Index.cshtml
@@ -6,35 +6,33 @@
 }
 
 
-
 <table class="table table-hover table-striped">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.todoName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.description)
-            </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.todoName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.description)
+                </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.todoName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.description)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.todoId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.todoId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.todoId">Delete</a>
-                </td>
-            </tr>
-        }
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.todoName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.description)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.todoId"><i class="fa fa-pencil"></i></a> |
+                <a asp-action="Details" asp-route-id="@item.todoId"><i class="fa fa-list"></i></a> |
+                <a asp-action="Delete" asp-route-id="@item.todoId"><i class="fa fa-trash"></i></a>
+            </td>
+        </tr>
+}
     </tbody>
 </table>
